Added joing game and get current game. Signalr is added, but not used yet.
