# ImposterGame/ImposterGame.App/Imposter/src/server/api/gameApi.service.ts
@@ -19,6 +19,7 @@ import { CustomHttpUrlEncodingCodec }                        from '../encoder';
 import { Observable }                                        from 'rxjs';
 
 import { IGame } from '../model/iGame';
+import { JoinGameModel } from '../model/joinGameModel';
 
 import { BASE_PATH, COLLECTION_FORMATS }                     from '../variables';
 import { Configuration }                                     from '../configuration';
@@ -59,6 +60,52 @@ export class GameApiService {
     /**
      * 
      * 
+     * @param gameId 
+     * @param observe set whether or not to return the data Observable as the body, response or events. defaults to returning the body.
+     * @param reportProgress flag to report request and response progress.
+     */
+    public apiGameApiGetGameGet(gameId?: string, observe?: 'body', reportProgress?: boolean): Observable<IGame>;
+    public apiGameApiGetGameGet(gameId?: string, observe?: 'response', reportProgress?: boolean): Observable<HttpResponse<IGame>>;
+    public apiGameApiGetGameGet(gameId?: string, observe?: 'events', reportProgress?: boolean): Observable<HttpEvent<IGame>>;
+    public apiGameApiGetGameGet(gameId?: string, observe: any = 'body', reportProgress: boolean = false ): Observable<any> {
+
+
+        let queryParameters = new HttpParams({encoder: new CustomHttpUrlEncodingCodec()});
+        if (gameId !== undefined && gameId !== null) {
+            queryParameters = queryParameters.set('gameId', <any>gameId);
+        }
+
+        let headers = this.defaultHeaders;
+
+        // to determine the Accept header
+        let httpHeaderAccepts: string[] = [
+            'text/plain',
+            'application/json',
+            'text/json'
+        ];
+        const httpHeaderAcceptSelected: string | undefined = this.configuration.selectHeaderAccept(httpHeaderAccepts);
+        if (httpHeaderAcceptSelected != undefined) {
+            headers = headers.set('Accept', httpHeaderAcceptSelected);
+        }
+
+        // to determine the Content-Type header
+        const consumes: string[] = [
+        ];
+
+        return this.httpClient.get<IGame>(`${this.basePath}/api/GameApi/GetGame`,
+            {
+                params: queryParameters,
+                withCredentials: this.configuration.withCredentials,
+                headers: headers,
+                observe: observe,
+                reportProgress: reportProgress
+            }
+        );
+    }
+
+    /**
+     * 
+     * 
      * @param playerId 
      * @param observe set whether or not to return the data Observable as the body, response or events. defaults to returning the body.
      * @param reportProgress flag to report request and response progress.
@@ -95,6 +142,54 @@ export class GameApiService {
             null,
             {
                 params: queryParameters,
+                withCredentials: this.configuration.withCredentials,
+                headers: headers,
+                observe: observe,
+                reportProgress: reportProgress
+            }
+        );
+    }
+
+    /**
+     * 
+     * 
+     * @param body 
+     * @param observe set whether or not to return the data Observable as the body, response or events. defaults to returning the body.
+     * @param reportProgress flag to report request and response progress.
+     */
+    public apiGameApiJoinPost(body?: JoinGameModel, observe?: 'body', reportProgress?: boolean): Observable<IGame>;
+    public apiGameApiJoinPost(body?: JoinGameModel, observe?: 'response', reportProgress?: boolean): Observable<HttpResponse<IGame>>;
+    public apiGameApiJoinPost(body?: JoinGameModel, observe?: 'events', reportProgress?: boolean): Observable<HttpEvent<IGame>>;
+    public apiGameApiJoinPost(body?: JoinGameModel, observe: any = 'body', reportProgress: boolean = false ): Observable<any> {
+
+
+        let headers = this.defaultHeaders;
+
+        // to determine the Accept header
+        let httpHeaderAccepts: string[] = [
+            'text/plain',
+            'application/json',
+            'text/json'
+        ];
+        const httpHeaderAcceptSelected: string | undefined = this.configuration.selectHeaderAccept(httpHeaderAccepts);
+        if (httpHeaderAcceptSelected != undefined) {
+            headers = headers.set('Accept', httpHeaderAcceptSelected);
+        }
+
+        // to determine the Content-Type header
+        const consumes: string[] = [
+            'application/json',
+            'text/json',
+            'application/_*+json'
+        ];
+        const httpContentTypeSelected: string | undefined = this.configuration.selectHeaderContentType(consumes);
+        if (httpContentTypeSelected != undefined) {
+            headers = headers.set('Content-Type', httpContentTypeSelected);
+        }
+
+        return this.httpClient.post<IGame>(`${this.basePath}/api/GameApi/Join`,
+            body,
+            {
                 withCredentials: this.configuration.withCredentials,
                 headers: headers,
                 observe: observe,
