# ImposterGame/ImposterGame.Website/Controllers/GameApiController.cs
@@ -8,8 +8,11 @@ using ImposterGame.Game;
 using ImposterGame.Game.Players;
 using ImposterGame.Model;
 using ImposterGame.Website.Controllers.Exceptions;
+using ImposterGame.Website.Hubs;
+using ImposterGame.Website.Models;
 using Microsoft.AspNetCore.Http;
 using Microsoft.AspNetCore.Mvc;
+using Microsoft.AspNetCore.SignalR;
 
 namespace ImposterGame.Website.Controllers
 {
@@ -19,11 +22,15 @@ namespace ImposterGame.Website.Controllers
     {
         private readonly IGameService _gameService;
         private readonly IPlayerService _playerService;
+        private readonly IHubContext<GameHub> _hubContext;
 
-        public GameApiController(IGameService gameService, IPlayerService playerService)
+        public GameApiController(IGameService gameService,
+            IPlayerService playerService)
+            //IHubContext<GameHub> hubcontext)
         {
             _gameService = gameService;
             _playerService = playerService;
+            //_hubContext = hubcontext;
         }
 
         [HttpPost("[action]")]
@@ -39,6 +46,40 @@ namespace ImposterGame.Website.Controllers
             var updatedGame = _gameService.CreateGame(player);
 
             return updatedGame;
+        }
+
+        [HttpPost("[action]")]
+        public async Task<IGame> Join([FromBody]JoinGameModel model)
+        {
+            var player = _playerService.GetPlayer(model.PlayerId);
+
+            if (player == null)
+            {
+                throw new ApiException("Player does not exist");
+            }
+
+            var game = _gameService.GetGame(model.GameCode);
+
+            var updatedGame = _gameService.JoinGame(game, player);
+
+            //await GameHub.StartRound(_hubContext.Clients, updatedGame.Id, updatedGame);
+
+            //await _hubContext.Clients.Groups(GameHub.GetGroupName(updatedGame.Id)).SendAsync(GameHub.GameUpdatedMethodName, game);
+
+            return updatedGame;
+        }
+
+        [HttpGet("[action]")]
+        public IGame GetGame(Guid gameId)
+        {
+            var game = _gameService.GetGame(gameId);
+
+            if (game == null)
+            {
+                return null;
+            }
+
+            return game;
         }
     }
 }
