# ImposterGame/ImposterGame.Website/Models/JoinGameModel.cs
@@ -1,0 +1,11 @@
+﻿using System;
+
+namespace ImposterGame.Website.Models
+{
+    public class JoinGameModel
+    {
+        public Guid PlayerId { get; set; }
+
+        public string GameCode { get; set; }
+    }
+}
