# ImposterGame/api-contract.json
@@ -33,6 +33,68 @@
         }
       }
     },
+    "/api/GameApi/Join": {
+      "post": {
+        "tags": [
+          "GameApi"
+        ],
+        "consumes": [
+          "application/json",
+          "text/json",
+          "application/*+json"
+        ],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "schema": {
+              "$ref": "#/definitions/JoinGameModel"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/IGame"
+            }
+          }
+        }
+      }
+    },
+    "/api/GameApi/GetGame": {
+      "get": {
+        "tags": [
+          "GameApi"
+        ],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "gameId",
+            "type": "string",
+            "format": "uuid"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/IGame"
+            }
+          }
+        }
+      }
+    },
     "/api/PlayerApi/Create": {
       "post": {
         "tags": [
@@ -255,6 +317,18 @@
         "canLeaveWithoutRoundCancellation": {
           "type": "boolean",
           "readOnly": true
+        }
+      }
+    },
+    "JoinGameModel": {
+      "type": "object",
+      "properties": {
+        "playerId": {
+          "format": "uuid",
+          "type": "string"
+        },
+        "gameCode": {
+          "type": "string"
         }
       }
     }
